testsuite/tests/name_resolution/W117-011_many_accesses/test.out
Analyzing test.adb
##################

Resolving xrefs for node <ObjectDecl ["V"] test.adb:5:4-13:16>
**************************************************************

test.adb:5:17: error: no such entity
5 |    V : constant Missing_Vector :=
  |                 ^^^^^^^^^^^^^^


Expected name resolution failure for node <ObjectDecl ["V"] test.adb:5:4-13:16>


Done.
